Fix vertical align.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   line-height: 100%;
   color: #808080;
   text-align: center;
-  vertical-align: center;
+  vertical-align: middle;
   height: 20rem;
 }
 
